--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "karaoke-render",
   "version": "1.0.0",
-  "type": "module",
+  "description": "Karaoke online com salas e emojis",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.2",
+    "cors": "^2.8.5"
   }
 }
